--- a/nma.tfvars.example
+++ b/nma.tfvars.example
@@ -11,7 +11,8 @@ panos = {
   hostname = "localhost"
   username = "username"
   password = "password"
-  api_key  = ""
+  api_key  = null
+  protocol = null
   port     = null
   timeout  = null
 }
@@ -31,22 +32,24 @@ virtual_addresses = {
   web1 = ["virtual.com"]
 }
 
-services = [
-  {
+services = {
+  web1: {
     # Pulled from HCL config
     name        = "web1"
     description = "spiderman"
 
     # Dynamic values discovered from Consul Catalog
-    addresses    = ["192.0.0.1:8000", "192.0.0.2:8000"]
-    sources      = ["192.0.0.1:8080"]
-    destinations = null
+    addresses         = ["192.0.0.1:8000", "192.0.0.2:8000"]
+    sources           = ["192.0.0.1:8080"]
+    destinations      = []
+    virtual_addresses = []
   },
-  {
-    name         = "web2"
-    description  = "charlette"
-    addresses    = ["192.0.0.13:5000"]
-    sources      = ["192.0.0.1:8080"]
-    destinations = ["192.0.0.1:8080"]
+  web2: {
+    name              = "web2"
+    description       = "charlette"
+    addresses         = ["192.0.0.13:5000"]
+    sources           = ["192.0.0.1:8080"]
+    destinations      = ["192.0.0.1:8080"]
+    virtual_addresses = []
   }
 ]
